[gd_scene load_steps=3 format=3 uid="uid://f8ayiyhqtnvl"]

[ext_resource type="Script" uid="uid://trkpuffbxdc6" path="res://addons/SolanaSDK/Scenes/transaction_simulator.gd" id="1_0uuhy"]
[ext_resource type="Script" uid="uid://dp4pk7x28dh4i" path="res://addons/SolanaSDK/Scenes/loading_label.gd" id="2_0uuhy"]

[node name="TransactionSimulator" type="ColorRect"]
custom_minimum_size = Vector2(320, 160)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_0uuhy")

[node name="SolanaClient" type="SolanaClient" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Transaction Simulation Results"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
text = "Before"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
text = "After"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Lamports: 0"
editable = false
scroll_fit_content_height = true

[node name="TextEdit2" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Lamports: 0"
editable = false
scroll_fit_content_height = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Data: 
"
editable = false

[node name="TextEdit2" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Data:
"
editable = false

[node name="SolanaClient2" type="SolanaClient" parent="."]

[node name="LoadingLabel" type="Label" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417101
anchor_top = 0.482253
anchor_right = 0.582899
anchor_bottom = 0.517747
offset_left = 75.5
offset_right = -75.5
grow_horizontal = 2
grow_vertical = 2
text = "Simulating Transaction..."
script = ExtResource("2_0uuhy")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="LoadingLabel"]
wait_time = 0.3
autostart = true

[node name="ErrorMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 17.0
offset_right = -13.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 2

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editable = false
wrap_mode = 1

[node name="Transaction" type="Transaction" parent="."]

[connection signal="http_response_received" from="SolanaClient" to="." method="_on_solana_client_http_response_received"]
[connection signal="http_response_received" from="SolanaClient2" to="." method="_on_solana_client_2_http_response_received"]
[connection signal="timeout" from="LoadingLabel/Timer" to="LoadingLabel" method="_on_timer_timeout"]
